# takktile_ros

./: CMakeLists.txt  README.md  package.xml
binary_descriptions/: barrett_hand_links.yml  barrett_hand_links_2d.yml
layout_descriptions/: barrett_hand.yml
msg/: Alive.msg  Contact.msg  Info.msg  Raw.msg  Touch.msg
src/: publish_binary.py  publish_servo.py  takktile_node.py  visualize_sensors.py
