<?xml version="1.0"?>
<package>
    <name>takktile_ros</name>
    <version>1.0.0</version>
    <description>
        takktile ROS integration
    </description>
    <url>http://ros.org/wiki/takktile</url>
    <author>ljentoft</author>
    <maintainer email="cliddick@andrew.cmu.edu">Clint Liddick</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>python</run_depend>
    <run_depend>numpy</run_depend>
    <run_depend>pyyaml</run_depend>
    <run_depend>TakkTile-usb</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
